--- a/app/assets/stylesheets/texts.css.scss
+++ b/app/assets/stylesheets/texts.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Texts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table, td {
+  border: 1px solid black;
+}
+
+th {
+  background-color: #2E9AFE;
+}
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+h1 {
+color:orange;
+}
