--- a/app/views/languages/index.html.erb
+++ b/app/views/languages/index.html.erb
@@ -1,25 +1,25 @@
-<h1>Listing languages</h1>
+<h1>Listing Languages</h1>
 
-<table>
+<table class="languages">
   <tr>
-    <th>Name</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Language Name</th>
+    <th>Content</th>    
+    <th>File</th>
+    <th colspan="3"></th>    
   </tr>
 
 <% @languages.each do |language| %>
   <tr>
     <td><%= language.name %></td>
     <td><%= language.content %></td>
+    <td><%= language.file_file_name %></td>
     <td><%= link_to 'Show', language %></td>
     <td><%= link_to 'Edit', edit_language_path(language) %></td>
-    <td><%= link_to 'Destroy', language, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    <td><%= link_to 'Delete', language, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Language', new_language_path %>
+<%= link_to 'Add New Language', new_language_path %>
