--- a/app/views/languages/show.html.erb
+++ b/app/views/languages/show.html.erb
@@ -10,6 +10,11 @@
   <%= @language.content %>
 </p>
 
+<p>
+  <b>File:</b>
+  <%= @language.file_file_name %>
+</p>
+
 
 <%= link_to 'Edit', edit_language_path(@language) %> |
 <%= link_to 'Back', languages_path %>
